Fixing css files to cover white space to Footer component

--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -16,7 +16,7 @@
 
 .about-container p {
   width: 100%;
-  height: 35vh;
+  height: 50vh;
   margin-top: 5%;
   color: white;
 }
