--- a/client/src/components/Contacts/Contacts.css
+++ b/client/src/components/Contacts/Contacts.css
@@ -17,7 +17,7 @@
 
 .contact-container p {
   width: 100%;
-  height: 35vh;
+  height: 50vh;
   margin-top: 5%;
   color: white;
 }
