--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -17,7 +17,7 @@
 
 .main-container .product-data {
   width: 100%;
-  height: 35vh;
+  height: 52vh;
   margin-top: 5%;
   color: white;
 }
